--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,9 @@
   
   /* General styles */
   body {
-    font-family: "Arial", sans-serif;
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
     background-color: var(--background-color);
     color: var(--text-color);
   }
@@ -64,13 +66,6 @@
     border-color: var(--text-color);
   }
   
-  body.container {
-    font-family: "Arial", sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
   .max-w-xs {
     max-width: 20rem;
   }
@@ -87,15 +82,6 @@
   .text-center {
     text-align: center;
   }
-  
-  .text-3xl {
-    font-size: 1.875rem;
-  }
-  
-  .font-bold {
-    font-weight: bold;
-  }
-  
   .uppercase {
     text-transform: uppercase;
   }
